--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Three Column Practice</title>
+    <title>Cos Practice Site</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div id="wrapper">
       <header id="top">
-        This is the header.
+        <img id="sticker" src="https://scontent-ord1-1.xx.fbcdn.net/hphotos-xfp1/v/t1.0-9/11046796_1686127784935772_344465111353713638_n.jpg?oh=df81412b19fd5ccb562d9b89064dc56b&oe=56D188EB">
+      <h1 id="electro">Electro</h1>
+      <h1 id="spacerock">Spacerock</h1>
       </header>
       <aside id="leftnav">
         Left side links.
       </aside>
       <section id="content">
-          The main section.
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/nvAD12G6-B4" frameborder="0" allowfullscreen></iframe>
       </section>
       <section id="more">
-        Right section.
+        <iframe id="bestbeef" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/224234846&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+
+        <iframe id="flydoitch" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/224234806&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
       </section>
       <footer id="end">The end</footer>
     </div>
