--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
       <h1 id="electro">Electro</h1>
       <h1 id="spacerock">Spacerock</h1>
       </header>
+      <br>
       <aside id="leftnav">
-        Left side links.
+        <ul>
+          <li><a href="#">Shows</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Store</a></li>
+        </ul>
       </aside>
       <section id="content">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/nvAD12G6-B4" frameborder="0" allowfullscreen></iframe>
@@ -23,7 +28,21 @@
 
         <iframe id="flydoitch" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/224234806&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
       </section>
-      <footer id="end">The end</footer>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <footer id="end">
+        <p>
+          masoncosband@gmail.com
+        </p>
+        <p><a href="https://www.facebook.com/MasonCosMusic/">LIKE US</a> if you like us.</p>
+      </footer>
     </div>
   </body>
 </html>
