component homework first commit

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8">
     <title>Cos Practice Site</title>
     <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <script src="scripts/app.js">
+
+    </script>
   </head>
   <body>
     <div id="wrapper">
@@ -15,19 +18,19 @@
       </header>
       <br>
       <aside id="leftnav">
-        <ul>
+        <ul class="nav">
           <li><a href="#">Shows</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Store</a></li>
         </ul>
       </aside>
       <section id="content">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/nvAD12G6-B4" frameborder="0" allowfullscreen></iframe>
+        <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/nvAD12G6-B4" frameborder="0" allowfullscreen></iframe> -->
       </section>
       <section id="more">
-        <iframe id="bestbeef" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/224234846&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+        <!-- <iframe id="bestbeef" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/224234846&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
 
-        <iframe id="flydoitch" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/224234806&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+        <iframe id="flydoitch" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/224234806&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe> -->
       </section>
       <br>
       <br>
@@ -89,6 +92,9 @@
 
       </section>
       <br>
+      <div id="brand">
+
+      </div>
       <br>
       <footer id="end">
         <p>
